--- a/front_nappipeli/public/index.html
+++ b/front_nappipeli/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -14,6 +15,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script src=”/socket.io/socket.io.js”></script>
   <div id="root"></div>
 </body>
 
